JEDIT 3.2 VERSION HISTORY

* Version 3.2pre6

+ New Features

- When running on Java 2, anti-aliasing can be enabled in Text Area
  pane of Global Options dialog box. Replaces AntiAlias plugin, and
  works better, because Java2D text measurement code is used to
  calculate offsets

+ Enhancements

- PHP mode now highlights variables in string literals
- Repeating an action more than 20 times displayed a confirmation
  dialog, but character input could be repeated any number of times.
  Now, a confirmation dialog is displayed for large character inputs
  too.
- Documentation updates
- Updated set of sample macros (John Gellene)

+ Neutral

- The functionality of the following macros has been moved to the
  corresponding plugins:

  - Go_to_Clipper (to Clipper plugin)
  - Go_to_Console (to Console plugin)
  - Show_Dual_Diff (to JDiff plugin)

+ Bug Fixes

- README.txt, CHANGES.txt, etc. were missing from jedit.jar
- Setting the file system browser's default path to 'favorites' didn't
  work
- In an abbrev expansion, $$1 will now be replaced by a dollar, followed
  by the value of the first positional parameter. Previously, the first
  dollar sign would cause problems
- 'Quick HyperSearch' command didn't work
- When running on Java 2, jEdit uses Java2D text rendering and
  measurement code. This should finally fix the 'caret drawn in wrong
  place' bug, even when anti-aliasing is enabled

* Version 3.2pre5

+ New Features

- BeanShell 1.1a18:
  - Better error reporting
  - Cleaned up internals
  - Performance improvements
  - You can now access JavaBeans properties using bean.prop or
    bean{"prop"} syntax
  - 'import' statements can be used in any block scope, not just top
    level. This means you can have import statements in actions.xml, for
    example.
  - Some jEdit code dealing with BeanShell has been cleaned up
- The three sample 'Hello' plugins included with the source download
  have been replaced with a single, more comprehensive demonstration